ui/v2.5/src/index.scss
/* ... */
/* stylelint-enable */

html {
  font-size: 14px;
}

body {
  color: $text-color;
  -moz-osx-font-smoothing: grayscale;
  -webkit-font-smoothing: antialiased;
  margin: 0;
  overflow-x: hidden;
  padding: 3.5rem 0 0 0;

  @include media-breakpoint-down(xs) {
    @media (orientation: portrait) {
      padding: 1rem 0 5rem;
    }
  }
}

.main-content-container {
  padding-top: 15px;

  @media (max-width: 576px) {
    overflow-x: hidden;
  }
}

code,
.code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

dd {
  white-space: pre-line;
}

.detail-header {
  background-color: #192127;
  min-height: 15rem;
  padding: 1rem;
  transition: 0.3s;
  width: 100%;
  z-index: 11;
}

.detail-header h2 {
  margin-bottom: 0;
}

.detail-header .details-edit div:nth-last-child(2) {
  flex: unset;
}

.sticky.detail-header-group a.movie-name,
.sticky.detail-header-group a.performer-name,
.sticky.detail-header-group a.studio-name,
.sticky.detail-header-group a.tag-name {
  color: #f5f8fa;
  cursor: pointer;
  font-weight: 800;
}

.sticky.detail-header-group a,
.sticky.detail-header-group span {
  color: #d7d9db;
  font-weight: 600;
  padding-right: 1.5rem;
}

.sticky.detail-header {
  display: block;
  min-height: 50px;
  padding: unset;
  position: fixed;
  top: 3.3rem;
  z-index: 10;

  @media (max-width: 576px) {
    top: 0;
  }
}

.sticky.detail-header .movie-name,
.sticky.detail-header .performer-name,
.sticky.detail-header .studio-name,
.sticky.detail-header .tag-name {
  font-weight: 800;
}

.sticky.detail-header-group {
  padding: 1rem 2.5rem;

  @media (max-width: 576px) {
    padding: 1rem 1.5rem;
  }
}

.detail-header .detail-group,
.detail-header .col {
  transition: 0.4s;
}

.detail-header .mr-2 {
  margin-left: 0.5rem;
}

.detail-header.edit {
  background-color: unset;
}

.detail-header.edit .details-edit {
  padding-top: 1rem;
}

.detail-body nav {
  align-content: center;
  align-items: center;
  border-bottom: solid 2px #192127;
  display: flex;
  justify-content: center;
  margin: 0;
  padding: 5px 0;
}

.detail-body {
  width: 100%;

  @media (max-width: 576px) {
    padding-left: 15px;
    padding-right: 15px;
  }
}

#tag-page .detail-header-image img {
  max-width: 18rem;
}

.detail-header-image img {
  border-radius: 0.5rem;
  max-width: 14rem;
  object-fit: contain;
  transition: 0.4s;

  @media (max-width: 576px) {
    max-width: 100%;
  }
}

.detail-item.tags .pl-0 {
  margin-bottom: 0;
}

.detail-header-image {
  display: flex;
  float: left;
  height: 100%;
  justify-content: center;
  padding: 0 1rem;

  @media (max-width: 576px) {
    height: unset;
  }
}

#performer-page .detail-header.edit .detail-header-image {
  height: unset;
}

.detail-group {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  padding: 1rem 0;
}

.detail-item {
  align-items: left;
  display: inline-flex;
  flex-direction: column;
  padding-bottom: 0.5rem;
  padding-right: 4rem;
}

.detail-item-title {
  color: #868791;
  font-weight: 700;
}

.detail-item-value {
  align-items: center;
  display: flex;
  flex-direction: row;
}

.input-control,
.text-input {
  border: 0;
  box-shadow: 0 0 0 0 rgba(19, 124, 189, 0), 0 0 0 0 rgba(19, 124, 189, 0),
    0 0 0 0 rgba(19, 124, 189, 0), inset 0 0 0 1px rgba(16, 22, 26, 0.3),
    inset 0 1px 1px rgba(16, 22, 26, 0.4);
  color: $text-color;

  &:focus {
    border: 0;
    box-shadow: 0 0 0 1px $primary, 0 0 0 1px $primary,
      0 0 0 3px rgba(19, 124, 189, 0.3), inset 0 0 0 1px rgba(16, 22, 26, 0.3),
      inset 0 1px 1px rgba(16, 22, 26, 0.4);
    color: $text-color;
  }
}

.input-control,
.input-control:focus,
.input-control:disabled {
  background-color: $secondary;
}

.input-control:disabled {
  opacity: 0.8;
}

.text-input,
.text-input:focus,
.text-input[readonly],
.text-input:disabled {
  background-color: $textfield-bg;
}

textarea.text-input {
  line-height: 2.5ex;
  min-height: 12ex;
  overflow-y: scroll;
}

.table-list {
  min-width: min-content;
}

.table-list a {
  color: $text-color;
}

.table-list table {
  width: inherit;
}

.table-list td,
.table-list th {
  border-left: 1px solid #414c53;
  font-size: 1rem;
  text-align: center;
  vertical-align: middle;

  h5,
  h6 {
    font-size: 1rem;
  }

  &:first-child {
    border-left: none;
  }
}

@media (min-width: 576px) {
  .zoom-0 {
    width: 240px;

    .scene-card-preview {
      height: 135px;
    }

    .portrait {
      height: 180px;
    }

    .gallery-card-image,
    .tag-card-image {
      max-height: 180px;
    }
  }

  .zoom-1 {
    width: 320px;

    .scene-card-preview {
      height: 180px;
    }

    .portrait {
      height: 240px;
    }

    .gallery-card-image,
    .tag-card-image {
      max-height: 240px;
    }

    .image-card-preview {
      height: 240px;
    }
  }

  .zoom-2 {
    width: 480px;

    .scene-card-preview {
      height: 270px;
    }

    .portrait {
      height: 360px;
    }

    .gallery-card-image,
    .tag-card-image {
      max-height: 360px;
    }

    .image-card-preview {
      height: 360px;
    }
  }

  .zoom-3 {
    width: 640px;

    .scene-card-preview {
      height: 360px;
    }

    .portrait {
      height: 480px;
    }

    .tag-card-image,
    .gallery-card-image {
      max-height: 480px;
    }

    .image-card-preview {
      height: 480px;
    }
  }
}

.scene-card-preview,
.gallery-card-image,
.tag-card-image,
.image-card-preview {
  height: auto;
  width: 100%;
}
/* ... */

